2004-06-24  MenTaLguY  <mental@rydia.net>

	* src/seltrans.cpp: slight change to make showing/hiding center
	  mark easier later on

2004-06-23  MenTaLguY  <mental@rydia.net>

	* src/Makefile_insert, src/desktop.cpp, src/managed.h,
	  src/message-context.cpp, src/message-stack.h, src/refcounted.h,
	  src/selection.h, src/view.cpp:

	  Changed my mind.

	  Inkscape::Managed is more properly called Inkscape::Refcounted

	* src/libnrtype/Makefile_insert, src/libnrtype/codepages.h,
	  src/libnrtype/cp1250.cpp, src/libnrtype/cp1251.cpp,
	  src/libnrtype/cp1252.cpp, src/libnrtype/cp1253.cpp,
	  src/libnrtype/cp1254.cpp, src/libnrtype/cp1255.cpp,
	  src/libnrtype/cp1256.cpp, src/libnrtype/cp1257.cpp,
	  src/libnrtype/cp1258.cpp, src/libnrtype/cp874.cpp,
	  src/libnrtype/cp932.cpp, src/libnrtype/cp936.cpp,
	  src/libnrtype/cp949.cpp, src/libnrtype/cp950.cpp:

	  removed unused Win32 codepage crap

2004-06-23  Carl Hetherington  <inkscape@carlh.net>

	* src/inkscape.cpp: Don't connect to SIGBUS on Win32, as
	it doesn't seem to exist.  Add Emacs mode line.
	Declaration-to-first-use and coding style cleanups.

2004-06-23  Peter Moulder  <pmoulder@mail.csse.monash.edu.au>

	* share/extensions/dia2svg.sh: Fix bashism and insecure tempfile usage.

2004-06-23  Ted Gould  <ted@gould.cx>

	* share/extensions/dropshadow.inkmod, share/extensions/roundhole.inkmod,
	src/extension/system.cpp:

	Setting it up so that poorly formed inkmod files generate actual GTK
	warnings so that they can be easily hidden.  Also, fixing these two inkmod
	files so that they don't generate the above mentioned warnings.

2004-06-22  Kees Cook  <kees@outflux.net>

	* src/inkscape.cpp: added SIGBUS and SIGABRT handling.

2004-06-22  John Cliff <simarilius@yahoo.com>

	* src/object-edit.cpp: 	Added knots for manipulation of pattern fills.
	* src/sp-shape.cpp, src/sp-shape.h: 	Added sp_shape_set_pattern to 
	explictly set the transform rather than multiplying like adjust.

