@@ -20,7 +20,7 @@ AC_HEADER_STDC
 # Honor aclocal flags
 ACLOCAL="$ACLOCAL $ACLOCAL_FLAGS"
 
-dnl AC_PROG_RANLIB
+AC_PROG_RANLIB
 
 AC_PROG_LIBTOOL
 
@@ -259,6 +259,7 @@ AC_CHECK_FUNCS(strstr)
 AC_CHECK_FUNCS(strtoul)
 AC_CHECK_FUNCS(fpsetmask)
 AC_CHECK_FUNCS(ecvt)
+AC_CHECK_HEADERS(ieeefp.h)
 AC_CHECK_HEADERS(fcntl.h)
 AC_CHECK_HEADERS(libintl.h)
 AC_CHECK_HEADERS(stddef.h)
